# cnpj-intel

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/: cli.py  orchestrator.py
src/agents/: __init__.py  cadastral.py  red_flags.py  redator.py  societario.py
src/analysis/: red_flags.py
src/llm/: __init__.py  groq_client.py  router.py
src/render/: __init__.py  pdf.py  style.css  template.html
src/sources/: __init__.py  brasilapi.py  cnpjws.py  normalize.py
tests/: test_groq_client.py  test_normalize.py  test_red_flags.py  test_sources.py
tests/fixtures/: itau.json  magazineluiza.json  petrobras.json
