[project]
name = "cnpj-intel"
version = "0.1.0"
description = "CLI de inteligência empresarial via CNPJ — pipeline multi-agente com Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "jinja2>=3.1",
    "weasyprint>=62.0",
    "python-stdnum>=1.20",
    "python-dotenv>=1.0",
    "groq>=0.9",
]

[project.scripts]
cnpj-intel = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
